--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -2,7 +2,7 @@
 import BaseHead from '@components/BaseHead.astro';
 import SiteHeader from '@components/SiteHeader.astro';
 import BlogPost from '@components/BlogPost.astro';
-import Footer from '@components/Footer.astro';
+import Footer from '@components/SiteFooter.astro';
 import { getCloudinaryThumbnailUrl } from '@lib/cloudinary';
 
 const { content } = Astro.props;
