--- a/src/components/BlogPostPreview.astro
+++ b/src/components/BlogPostPreview.astro
@@ -14,9 +14,11 @@ const postUrl = `/p/${post.slug}`
 	<div class="post-preview-inner @md:flex-row @md:items-center">
 		<div class="flex-1">
 			<header>
-				<a href={postUrl}><h1 class="title font-bold [font-size:min(1.875rem,_15cqi)] @lg:[font-size:2.25rem] [font-variation-settings:'wdth'_120] tracking-[-0.03ch] leading-[1.025]">{post.title}</h1></a>
-				<p class="description mt-[0.375em] @lg:[font-size:1.125rem] leading-snug max-w-prose">{post.excerpt}</p>
-				<p class="publish-date dateline mt-[0.75em]"><Date date={post.date} /></p>
+				<a href={postUrl}>
+					<h1 class="text-style-title text-style-title-sm animatedPostTitle">{post.title}</h1>
+				</a>
+				<p class="description mt-[0.375em] @lg:[font-size:1.25rem] leading-snug max-w-prose text-text-low-emphasis">{post.excerpt}</p>
+				<p class="text-style-dateline mt-4"><Date date={post.date} /></p>
 			</header>
 		</div>
 
@@ -41,9 +43,44 @@ const postUrl = `/p/${post.slug}`
 	@apply flex flex-col;
 	column-gap: 1.5rem;
 	column-gap: 6cqi;
-	 /* gap-y-[7cqi] */
 	row-gap: 1.5rem;
 	row-gap: 7cqi;
 }
 
+</style>
+
+<style lang="scss">
+@use "sass:color";
+
+@keyframes slideBackground {
+  from {
+    background-position-x: 0;
+  }
+
+  to {
+    background-position-x: 200%;
+  }
+}
+
+.animatedPostTitle:hover {
+	$color1: #6d28d9;
+	$color2: color.adjust($color1, $lightness: 30%, $hue: 90deg);
+
+  background-clip: text;
+  background-color: pink;
+  background-image: linear-gradient(
+    90deg,
+    $color2,
+    $color1,
+    $color2
+  );
+  background-size: 200% 100%;
+  color: transparent;
+  display: inline-block;
+  animation-name: slideBackground;
+  animation-iteration-count: infinite;
+  animation-duration: 1s;
+  animation-delay: 0;
+  animation-timing-function: linear;
+}
 </style>
