--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,15 +4,14 @@ import { Image } from '@astrojs/image/components';
 import BaseHead from '@components/BaseHead.astro';
 import SiteHeader from '@components/SiteHeader.astro';
 import BlogPostPreview from '@components/BlogPostPreview.astro';
-import Footer from '@components/Footer.astro';
+import Footer from '@components/SiteFooter.astro';
 import Intro from '@components/home/Intro.astro';
 
 import { getAllPosts } from '@lib/posts';
-import SiteLayout from '@components/SiteLayout.astro';
+import SiteLayout from '@layouts/SiteLayout.astro';
 
 let title = "David Demaree's blog";
 let description = 'The perfect starter for your perfect blog.';
-let permalink = 'https://example.com/';
 
 let allPosts = []
 
@@ -24,16 +23,8 @@ allPosts = await getAllPosts();
 // console.log(Astro.request.headers);
 
 ---
-<html lang="en" data-theme="dark">
-	<head>
-		<BaseHead title={title} description={description} permalink={permalink} />
-	</head>
-
-	<body>
-		<SiteLayout>
-			<main class="h-full w-inset max-w-[920px] mx-auto flex items-center">
-				<Intro />
-			</main>
-		</SiteLayout>
-	</body>
-</html>
+<SiteLayout title={title} description={description}>
+	<main class="h-full w-inset max-w-[920px] mx-auto flex items-center">
+		<Intro />
+	</main>
+</SiteLayout>
