--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,6 +1,7 @@
 @import url("https://cdn.demaree.net/fonts/tiempos/fonts.css");
 @import url("https://cdn.demaree.net/fonts/soehne/index.css");
 @import url("https://cdn.demaree.net/fonts/soehne-mono/index.css");
+@import url("https://cdn.demaree.net/fonts/soehne-breit/index.css");
 
 $sans: "soehne-web", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
   Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
