--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ const description = "Web designer, product person, keyboard enthusiast"
   --weird-image-opacity: 0.2;
 }
 
-.page-home .site-layout-main:before {
+/* .page-home .site-layout-main:before {
   background-image:
     radial-gradient(ellipse at center, #fff9, #fff0, #fff9),
     linear-gradient(90deg, pink, yellow);
@@ -54,7 +54,7 @@ const description = "Web designer, product person, keyboard enthusiast"
   content: "";
   display: block; 
   z-index: -1;
-}
+} */
 
 .home-wrap {
   container-type: inline-size;
