--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import MyLinks from "@components/MyLinks.astro";
 const title = "David Demaree's web site"
 const description = "Web designer, product person, keyboard enthusiast"
 ---
-<SiteLayout {...{title, description}} footerOptions={{showBio: false, showLinks: false}} bodyClass="page-home">
+<SiteLayout {...{title, description}} footerOptions={{showBio: false, showLinks: false}} bodyClass="page-home" section="home">
   <div class="home-wrap">
     <div class="home">
       <div class="home-content">
